--- a/templates/Submit.html
+++ b/templates/Submit.html
@@ -27,8 +27,17 @@
         </div>
       </div>
     </li>
+    <li>
+      <div class="item-content">
+        <div class="item-inner">
+          <div class="item-input">
+            <input type="text" placeholder="提供者" name="provide_user_name" id="provide_user_name" >
+          </div>
+        </div>
+      </div>
+    </li>
   </ul>
-  <div class="content-block-title">2 values and 3d-rotate effect</div>
+  <!-- <div class="content-block-title">2 values and 3d-rotate effect</div>
   <div class="list-block">
     <ul>
       <li>
@@ -51,7 +60,7 @@
         </div>
       </li>
     </ul>
-  </div>
+  </div> -->
   <p class="login">
     <div class="button button-big button-fill" onclick="news1()" >提交</div>
   </p>
