--- a/templates/Submit.html
+++ b/templates/Submit.html
@@ -1,6 +1,9 @@
 {% extends "base.html" %}
 {% block nav%}
 <div class="navbar-inner">
+  <div class="left">
+      <a href="/" class="link" >返回</a>
+  </div>
   <div class="center" style="left: 0px;">提交课表接口</div>
   <!-- <div class="right"></div> -->
 </div>
